tag all content

--- a/index.html
+++ b/index.html
@@ -28,3 +28,52 @@ Add todo
     Have a great workshop 0 pomodoros
   </body>
 </html>
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title> Todo List</title>
+    </head>
+    <body>
+        <h1>Workshop Todo List</h1>
+        <ul>
+            <li>
+                <input type="checkbox">
+                Make the curriculum 4 promodoros
+            </li>
+            <li>
+                <input type= "checkbox">
+                Buy workshop supplies 3 promodoros
+            </li>
+            <li>
+                <input type= "checkbox">
+                Meet with the coulenteer trainers 2 promodoros
+            </li>
+            <li>
+                <input type= "checkbox">
+                Order food for Saturday and Sunday 1 promodoros
+            </li>
+            <li>
+                <input type= "checkbox">
+                Check pre-work assignments 2 promodoros
+            </li>
+            <li>
+                <input type="checkbox">
+                Send workshop location to all the students 1 promodoros
+            </li>
+            <li>
+                <input type= "checkbox">
+                Have a great workshop 0 promodoros
+            </li>
+        </ul>
+    </body>
+</html>
+
+
+
+
+
+
+
+
