tag all content

--- a/index.html
+++ b/index.html
@@ -40,33 +40,37 @@ Add todo
         <ul>
             <li>
                 <input type="checkbox">
-                Make the curriculum 4 promodoros
+                Make the curriculum 4 pomodoros
             </li>
             <li>
                 <input type= "checkbox">
-                Buy workshop supplies 3 promodoros
+                Buy workshop supplies 3 pomodoros
             </li>
             <li>
                 <input type= "checkbox">
-                Meet with the coulenteer trainers 2 promodoros
+                Meet with the coulenteer trainers 2 pomodoros
             </li>
             <li>
                 <input type= "checkbox">
-                Order food for Saturday and Sunday 1 promodoros
+                Order food for Saturday and Sunday 1 pomodoros
             </li>
             <li>
                 <input type= "checkbox">
-                Check pre-work assignments 2 promodoros
+                Check pre-work assignments 2 pomodoros
             </li>
             <li>
                 <input type="checkbox">
-                Send workshop location to all the students 1 promodoros
+                Send workshop location to all the students 1 pomodoros
             </li>
             <li>
                 <input type= "checkbox">
-                Have a great workshop 0 promodoros
+                Have a great workshop 0 pomodoros
             </li>
         </ul>
+        
+        <input type="text" placeholder= "Add A New Todo...">
+        <input type="number" placeholder= "Pomodoro Estimate" >
+        <input type="submit" value= "Add todo" >
     </body>
 </html>
 
