tag all content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Add todo
         <ul>
             <li>
                 <input type="checkbox">
-                Make the curriculum 4 pomodoros
+                <a href= "show.html">Make the curriculum</a>4 pomodoros
             </li>
             <li>
                 <input type= "checkbox">
@@ -69,7 +69,7 @@ Add todo
         </ul>
         
         <input type="text" placeholder= "Add A New Todo...">
-        <input type="number" placeholder= "Pomodoro Estimate" >
+        <input type="number" placeholder= "Pomodoro Estimate..." >
         <input type="submit" value= "Add todo" >
     </body>
 </html>
