tag all content

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ Add todo
 <html>
     <head>
         <title> Todo List</title>
+        <link rel="stylesheet" href="index.css" type="text/css" />
     </head>
     <body>
         <h1>Workshop Todo List</h1>
