adding an image

--- a/show.html
+++ b/show.html
@@ -10,6 +10,7 @@
         <a href= "#">Edit</a>
         <a href= "#">Delete</a>
         <a href= "index.html">Go back...</a>
+        <img id= "image-2" src="http://clipground.com/images/completed-clipart-8.jpg"></img>
     </body>
 </html>
 
